--- a/GET/templates/result.html
+++ b/GET/templates/result.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
    <body>
-       <div>Hello, {{name}}</div>
+       <div>Hello, {{name | safe}}</div>
    </body>
 </html>
